src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_4_lexical_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "double",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    Multiply,
    Integer {
        literal: 2,
    },
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "doubel",
    },
    OpeningRoundBracket,
    Integer {
        literal: 5,
    },
    ClosingRoundBracket,
]
