src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_5_evaluation_error.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: error
---
Err(
    "Identifier not found: multiplier.",
)
