src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_5_syntax_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "double",
            expression: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Multiply,
                                right_hand: Identifier {
                                    identifier: "multiplier",
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Call {
            function: Identifier {
                identifier: "double",
            },
            arguments: [
                Integer {
                    literal: 5,
                },
            ],
        },
    },
]
