src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_6_lexical_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "identity",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "identity",
    },
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    SemiColon,
    Identifier {
        literal: "x",
    },
]
