src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_7_lexical_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: tokens
---
[
    If,
    OpeningRoundBracket,
    Identifier {
        literal: "unknown",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Integer {
        literal: 1,
    },
    ClosingCurlyBracket,
    Else,
    OpeningCurlyBracket,
    Integer {
        literal: 2,
    },
    ClosingCurlyBracket,
    SemiColon,
]
