src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_7_syntax_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Identifier {
                identifier: "unknown",
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Integer {
                            literal: 1,
                        },
                    },
                ],
            },
            alternative: Some(
                Block {
                    nodes: [
                        Expression {
                            expression: Integer {
                                literal: 2,
                            },
                        },
                    ],
                },
            ),
        },
    },
]
